--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "gii/module-opname-stock",
+    "name": "hanafalah/module-opname-stock",
     "autoload": {
         "psr-4": {
-            "Gii\\ModuleOpnameStock\\": "src/"
+            "Hanafalah\\ModuleOpnameStock\\": "src/"
         }
     },
     "authors": [
@@ -12,10 +12,10 @@
         }
     ],
     "require": {
-        "zahzah/laravel-support": "1.x",
-        "zahzah/module-warehouse": "1.x",
-        "zahzah/module-transaction": "1.x",
-        "gii/module-item": "1.x"
+        "hanafalah/laravel-support": "1.x",
+        "hanafalah/module-warehouse": "1.x",
+        "hanafalah/module-transaction": "1.x",
+        "hanafalah/module-item": "1.x"
     },
     "minimum-stability": "dev",
     "prefer-stable": false
