update composer json to 1.x

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     },
     "authors": [
         {
-            "name": "Alghi",
+            "name": "Hamzah",
             "email": "a@a.com"
         }
     ],
