--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
     },
     "authors": [
         {
-            "name": "Alghi",
+            "name": "Hamzah",
             "email": "a@a.com"
         }
     ],
     "require": {
-        "hanafalah/laravel-support": "1.x",
-        "hanafalah/module-warehouse": "1.x",
-        "hanafalah/module-transaction": "1.x",
-        "hanafalah/module-item": "1.x"
+        "hanafalah/laravel-support": "dev-main",
+        "hanafalah/module-warehouse": "dev-main",
+        "hanafalah/module-transaction": "dev-main",
+        "hanafalah/module-item": "dev-main"
     },
     "minimum-stability": "dev",
     "prefer-stable": false
